chore: minor style updates + add some ignoring cache + update lock file